@@ -200,6 +200,40 @@ enum eRoomShape
     MAX_ROOMSHAPES
 };
 
+enum eRoomType {
+    ROOM_NULL = 0,
+    ROOM_DEFAULT = 1,
+    ROOM_SHOP = 2,
+    ROOM_ERROR = 3,
+    ROOM_TREASURE = 4,
+    ROOM_BOSS = 5,
+    ROOM_MINIBOSS = 6,
+    ROOM_SECRET = 7,
+    ROOM_SUPERSECRET = 8,
+    ROOM_ARCADE = 9,
+    ROOM_CURSE = 10,
+    ROOM_CHALLENGE = 11,
+    ROOM_LIBRARY = 12,
+    ROOM_SACRIFICE = 13,
+    ROOM_DEVIL = 14,
+    ROOM_ANGEL = 15,
+    ROOM_DUNGEON = 16,
+    ROOM_BOSSRUSH = 17,
+    ROOM_ISAACS = 18,
+    ROOM_BARREN = 19,
+    ROOM_CHEST = 20,
+    ROOM_DICE = 21,
+    ROOM_BLACK_MARKET = 22,
+    ROOM_GREED_EXIT = 23,
+    ROOM_PLANETARIUM = 24,
+    ROOM_TELEPORTER = 25,
+    ROOM_TELEPORTER_EXIT = 26,
+    ROOM_SECRET_EXIT = 27,
+    ROOM_BLUE = 28,
+    ROOM_ULTRASECRET = 29,
+    NUM_ROOMTYPES = 30
+};
+
 enum eDoorSlots 
 {
     DOOR_SLOT_LEFT0 = 0, // Left wall, top
@@ -1261,6 +1295,46 @@ enum LevelStage
         NUM_BACKWARDS_STAGES = 7 // Save stages up to Mausoleum II for the Ascent (7 stages)
 };
 
+enum eStbType {
+    STB_SPECIAL_ROOMS = 0,
+    STB_BASEMENT = 1,
+    STB_CELLAR = 2,
+    STB_BURNING_BASEMENT = 3,
+    STB_CAVES = 4,
+    STB_CATACOMBS = 5,
+    STB_FLOODED_CAVES = 6,
+    STB_DEPTHS = 7,
+    STB_NECORPOLIS = 8,
+    STB_DANK_DEPTHS = 9,
+    STB_WOMB = 10,
+    STB_UTERO = 11,
+    STB_SCARRED_WOMB = 12,
+    STB_BLUE_WOMB = 13,
+    STB_SHEOL = 14,
+    STB_CATHEDRAL = 15,
+    STB_DARK_ROOM = 16,
+    STB_CHEST = 17,
+    STB_UNUSED1 = 18,
+    STB_UNUSED2 = 19,
+    STB_UNUSED3 = 20,
+    STB_UNUSED4 = 21,
+    STB_UNUSED5 = 22,
+    STB_UNUSED6 = 23,
+    STB_THE_SHOP = 24,
+    STB_ULTRA_GREED = 25,
+    STB_THE_VOID = 26,
+    STB_DOWNPOUR = 27,
+    STB_DROSS = 28,
+    STB_MINES = 29,
+    STB_ASHPIT = 30,
+    STB_MAUSOLEUM = 31,
+    STB_GEHENNA = 32,
+    STB_CORPSE = 33,
+    STB_UNUSED7 = 34,
+    STB_HOME = 35,
+    STB_BACKWARDS = 36
+};
+
 static DWORD GetBaseAddress()
 {
         return (DWORD)GetModuleHandle(NULL);
@@ -1446,6 +1520,113 @@ enum EntityFlag : UINT64 {
 
 	FLAG_STATUS_EFFECTS = (UINT64)(FLAG_FREEZE + FLAG_POISON + FLAG_SLOW + FLAG_CHARM + FLAG_CONFUSION + FLAG_MIDAS_FREEZE + FLAG_FEAR + FLAG_BURN + FLAG_SHRINK + FLAG_FRIENDLY + FLAG_BLEED_OUT + FLAG_ICE_FROZEN + FLAG_ICE + FLAG_MAGNETIZED + FLAG_BAITED + FLAG_WEAKNESS + FLAG_BRIMSTONE_MARKED),
 	FLAG_NON_STATUS_EFFECTS = (((UINT64)1 << 60) - 1) - FLAG_STATUS_EFFECTS,
+};
+
+enum eBossId {
+    BOSS_NULL = 0,
+    BOSS_MONSTRO = 1,
+    BOSS_LARRY_JR = 2,
+    BOSS_CHUB = 3,
+    BOSS_GURDY = 4,
+    BOSS_MONSTRO_II = 5,
+    BOSS_MOM = 6,
+    BOSS_SCOLEX = 7,
+    BOSS_MOMS_HEART = 8,
+    BOSS_FAMINE = 9,
+    BOSS_PESTILENCE = 10,
+    BOSS_WAR = 11,
+    BOSS_DEATH = 12,
+    BOSS_DUKE_OF_FLIES = 13,
+    BOSS_PEEP = 14,
+    BOSS_LOKI = 15,
+    BOSS_BLASTOCYST = 16,
+    BOSS_GEMINI = 17,
+    BOSS_FISTULA = 18,
+    BOSS_GISH = 19,
+    BOSS_STEVEN = 20,
+    BOSS_CHAD = 21,
+    BOSS_HEADLESS_HORSEMAN = 22,
+    BOSS_FALLEN = 23,
+    BOSS_SATAN = 24,
+    BOSS_IT_LIVES = 25,
+    BOSS_HOLLOW = 26,
+    BOSS_CARRION_QUEEN = 27,
+    BOSS_GURDY_JR = 28,
+    BOSS_HUSK = 29,
+    BOSS_BLOAT = 30,
+    BOSS_LOKII = 31,
+    BOSS_BLIGHTED_OVUM = 32,
+    BOSS_TERATOMA = 33,
+    BOSS_WIDOW = 34,
+    BOSS_MASK_OF_INFAMY = 35,
+    BOSS_WRETCHED = 36,
+    BOSS_PIN = 37,
+    BOSS_CONQUEST = 38,
+    BOSS_ISAAC = 39,
+    BOSS_BLUE_BABY = 40,
+    BOSS_DADDY_LONG_LEGS = 41,
+    BOSS_TRIACHNID = 42,
+    BOSS_HAUNT = 43,
+    BOSS_DINGLE = 44,
+    BOSS_MEGA_MAW = 45,
+    BOSS_GATE = 46,
+    BOSS_MEGA_FATTY = 47,
+    BOSS_CAGE = 48,
+    BOSS_MEGA_GURDY = 49,
+    BOSS_DARK_ONE = 50,
+    BOSS_ADVERSARY = 51,
+    BOSS_POLYCEPHALUS = 52,
+    BOSS_MR_FRED = 53,
+    BOSS_LAMB = 54,
+    BOSS_MEGA_SATAN = 55,
+    BOSS_GURGLINGS = 56,
+    BOSS_STAIN = 57,
+    BOSS_BROWNIE = 58,
+    BOSS_FORSAKEN = 59,
+    BOSS_LITTLE_HORN = 60,
+    BOSS_RAG_MAN = 61,
+    BOSS_ULTRA_GREED = 62,
+    BOSS_HUSH = 63,
+    BOSS_DANGLE = 64,
+    BOSS_TURDLINGS = 65,
+    BOSS_FRAIL = 66,
+    BOSS_RAG_MEGA = 67,
+    BOSS_SISTERS_VIS = 68,
+    BOSS_BIG_HORN = 69,
+    BOSS_DELIRIUM = 70,
+    BOSS_ULTRA_GREEDIER = 71,
+    BOSS_MATRIARCH = 72,
+    BOSS_PILE = 73,
+    BOSS_REAP_CREEP = 74,
+    BOSS_BEELZEBLUB = 75,
+    BOSS_WORMWOOD = 76,
+    BOSS_RAINMAKER = 77,
+    BOSS_VISAGE = 78,
+    BOSS_SIREN = 79,
+    BOSS_TUFF_TWINS = 80,
+    BOSS_HERETIC = 81,
+    BOSS_HORNFEL = 82,
+    BOSS_GREAT_GIDEON = 83,
+    BOSS_BABY_PLUM = 84,
+    BOSS_SCOURGE = 85,
+    BOSS_CHIMERA = 86,
+    BOSS_ROTGUT = 87,
+    BOSS_MOTHER = 88,
+    BOSS_MOM_MAUSOLEUM = 89,
+    BOSS_MOMS_HEART_MAUSOLEUM = 90,
+    BOSS_MIN_MIN = 91,
+    BOSS_CLOG = 92,
+    BOSS_SINGE = 93,
+    BOSS_BUMBINO = 94,
+    BOSS_COLOSTOMIA = 95,
+    BOSS_SHELL = 96,
+    BOSS_TURDLET = 97,
+    BOSS_RAGLICH = 98,
+    BOSS_DOGMA = 99,
+    BOSS_BEAST = 100,
+    BOSS_HORNY_BOYS = 101,
+    BOSS_CLUTCH = 102,
+    BOSS_CADAVRA = 103
 };
 
 
