@@ -40,6 +40,9 @@ __thiscall void ItemPool::ResetCollectible(int Collectible);
 "558bec6b45??34":
 __thiscall ItemPool_Item* ItemPool::GetPool(int itemPoolType);
 
+"558bec83e4f883ec1453568b75??57":
+__thiscall int ItemPool::GetPoolForRoom(uint32_t RoomType, uint32_t Seed);
+
 struct ItemPool depends (ItemPool_Item, RNG) {
 	{{
 		inline std::vector<bool>* GetRemovedCollectibles() { return &this->_removedCollectibles; }
