@@ -3,6 +3,7 @@
 struct RoomASM {
 	bool ForceSpecialQuestDoor = false;
 	bool WaterDisabled = false;
+	int ItemPool = -1;
 };
 
 extern RoomASM roomASM;
